# cbd_heat_plugin

./: README.md  requirements.txt  setup.cfg
cloudbigdata/: cbd_client.py
cloudbigdata/resources/: cloud_big_data.py
cloudbigdata/tests/: test_cloud_big_data.py
hots/: hadoop.yaml  kafka.yaml  spark.yaml
rackspace/: cbd_client.py  clients.py
rackspace/resources/: cloud_big_data.py
rackspace/tests/: test_cloud_big_data.py
