[metadata]
name = heat-contrib-rackspace
summary = Heat resources for working with the Rackspace Cloud
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    rackspace

# Copy to /usr/lib/heat for non-stevedore plugin loading
data_files =
    lib/heat/rackspace = rackspace/resources/*
    lib/heat/heat_keystoneclient_v2 = heat_keystoneclient_v2/*

[entry_points]

heat.clients =
    cloud_big_data = rackspace.clients:RackspaceCBDClientPlugin

heat.constraints =
    cbd.stack = rackspace.resources.cloud_big_data:StackConstraint
    cbd.flavor = rackspace.resources.cloud_big_data:FlavorConstraint

[global]
setup-hooks =
    pbr.hooks.setup_hook
