[metadata]
name = rackspace-heat-cbd
summary = Heat resources for Rackspace Cloud Big Data
description-file =
    README.md
author = Rackspace
author-email = cloudbigdata@lists.rackspace.com
home-page = http://www.rackspace.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    cloudbigdata

# Copy to /usr/lib/heat for non-stevedore plugin loading
data_files =
    lib/heat/rackspace = cloudbigdata/resources/*

[entry_points]

heat.clients =
    cloud_big_data = cloudbigdata.cbd_client:RackspaceCBDClientPlugin

heat.constraints =
    cbd.stack = cloudbigdata.cbd_client:StackConstraint
    cbd.flavor = cloudbigdata.cbd_client:FlavorConstraint

[global]
setup-hooks =
    pbr.hooks.setup_hook
